# RepChecker

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  build.sh  example.json  main.cpp
.github/workflows /: main.yml
Obsidian Vault/: RepChecker.md
Obsidian Vault/.obsidian/: graph.json  workspace.json
lib/: AAAAAAAAA.txt  CMakeLists.txt  CmakeLists.txt  pdf2img.h
lib/ContentChecker/: CMakeLists.txt  contentChecker.cpp  example.cpp
lib/ContentChecker/include/contentChecker/: contentChecker.hpp
lib/block_indexing/: CMakeLists.txt  block_indexing.cpp
lib/block_indexing/include/block_indexing/: block_indexing.hpp
lib/check_format/: CMakeLists.txt  check_format.cpp
lib/check_format/include/: check_format.hpp
lib/classify_blocks/: CmakeLists.txt  classify_blocks.cpp  example.cpp
lib/classify_blocks/include/classify_blocks/: classify_blocks.hpp
lib/cut_rectangles/: CMakeLists.txt  cut_rectangles.cpp
lib/cut_rectangles/include/cut_rectangles/: cut_rectangles.hpp
lib/indents/: CMakeLists.txt  indents.cpp
lib/indents/include/: indents.hpp
lib/intervales/: CMakeLists.txt  example.cpp  intervales.cpp
lib/intervales/include/intervales/: intervales.hpp
lib/markup/: CMakeLists.txt  markup.cpp
lib/pdf2img/: CMakeLists.txt  pdf2img.cpp
lib/pdf2img/include/pdf2img/: pdf2img.h
lib/rectangles/: CMakeLists.txt  example.cpp  rectangles.cpp
lib/rectangles/include/rectangles/: rectangles.hpp
lib/text_recognition/: CMakeLists.txt  example.cpp  text_rec.cpp  text_recognition.cpp
lib/text_recognition/include/: text_rec.hpp
lib/text_recognition/include/text_recognition/: text_recognition.hpp
lib/title_check/: CMakeLists.txt  title_check.cpp
lib/title_check/include/title_check/: title_check.hpp
